--- a/bulk-claim-api/build.gradle
+++ b/bulk-claim-api/build.gradle
@@ -49,3 +49,6 @@ tasks.named('bootJar') {
 tasks.named('bootRun') {
     enabled = false
 }
+tasks.withType(Test).configureEach {
+    useJUnitPlatform()
+}
