--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,12 +15,11 @@ registries:
     url: https://maven.pkg.github.com/ministryofjustice/laa-ccms-spring-boot-common
     username: ${{ secrets.USER }}
     password: ${{ secrets.REPO_TOKEN }}
-
 updates:
   - package-ecosystem: "gradle"
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: "daily"
     registries: "*"
     groups:
       gradle-updates:
@@ -32,7 +31,7 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: "daily"
     groups:
       github-actions:
         patterns:
