--- a/bulk-claim-service/build.gradle
+++ b/bulk-claim-service/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'io.micrometer:micrometer-tracing-bridge-brave'
+    implementation 'jakarta.validation:jakarta.validation-api:3.1.1'
+    implementation 'org.projectlombok:lombok:1.18.38'
 
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
 
