--- a/bulk-claim-service/src/integrationTest/resources/application.yml
+++ b/bulk-claim-service/src/integrationTest/resources/application.yml
@@ -48,4 +48,4 @@ laa:
     url: ${laa.provider-details-api.hostname}
     accessToken: ${PROVIDER_DETAILS_API_ACCESS_TOKEN}
   claims-api:
-    base-url: ${CLAIMS_API_URL}
+    base-url: localhost
