--- a/bulk-claim-service/src/main/resources/application.yml
+++ b/bulk-claim-service/src/main/resources/application.yml
@@ -48,4 +48,6 @@ laa:
     url: ${laa.provider-details-api.hostname}
     accessToken: ${PROVIDER_DETAILS_API_ACCESS_TOKEN}
   claims-api:
-    base-url: ${CLAIMS_API_URL}
+    hostname: ${CLAIMS_API_URL}
+    url: ${laa.claims-api.hostname}
+    accessToken: ${CLAIMS_API_ACCESS_TOKEN}
