--- a/.github/workflows/build-feature.yml
+++ b/.github/workflows/build-feature.yml
@@ -23,10 +23,10 @@ jobs:
     with:
       integration_test_task: "integrationTest"
       publish_package: 'false' # TODO: set to true
-      junit_results_path: 'bulk-claim-service/build/test-results'
-      junit_report_path: 'bulk-claim-service/build/reports/tests'
-      checkstyle_report_path: 'bulk-claim-service/build/reports/checkstyle'
-      jacoco_coverage_report_path: 'bulk-claim-service/build/reports/jacoco'
+      junit_results_path: 'data-claims-event-service/build/test-results'
+      junit_report_path: 'data-claims-event-service/build/reports/tests'
+      checkstyle_report_path: 'data-claims-event-service/build/reports/checkstyle'
+      jacoco_coverage_report_path: 'data-claims-event-service/build/reports/jacoco'
     secrets:
       gh_token: ${{ secrets.GITHUB_TOKEN }}
       aws_region: 'eu-west-2'
@@ -38,7 +38,7 @@ jobs:
       contents: read
       id-token: write
     with:
-      jar_subproject: 'bulk-claim-service'
+      jar_subproject: 'data-claims-event-service'
       image_version: ${{ format('{0}-{1}', vars.IMAGE_PREFIX, needs.build.outputs.published_artifact_version) }}
       publish: false
     secrets:
