--- a/settings.gradle
+++ b/settings.gradle
@@ -2,7 +2,7 @@ pluginManagement {
     repositories {
         maven {
             name = "gitHubPackages"
-            url = 'https://maven.pkg.github.com/ministryofjustice/laa-ccms-spring-boot-common'
+            url = 'https://maven.pkg.github.com/ministryofjustice/laa-spring-boot-common'
             credentials {
                 username = System.getenv("GITHUB_ACTOR")?.trim() ?: settings.ext.find('project.ext.gitPackageUser')
                 password = System.getenv("GITHUB_TOKEN")?.trim() ?: settings.ext.find('project.ext.gitPackageKey')
@@ -11,11 +11,15 @@ pluginManagement {
         maven { url = "https://plugins.gradle.org/m2/" }
         gradlePluginPortal()
     }
+
+    plugins {
+        id 'uk.gov.laa.springboot.laa-spring-boot-gradle-plugin' version '1.0.0'
+    }
 }
 
 rootProject.name = 'laa-data-claims-event-service'
 
-include 'provider-details-api-reference'
-include 'bulk-claim-api'
+include 'reference-provider-details-api'
+include 'reference-data-claim-api'
 include 'data-claims-event-service'
 
