--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ out/
 
 bulk-claim-api/generated
 provider-details-api-reference/generated
+claims-api-reference/generated
 
 # Ignore local application config
 application-local.yaml
