--- a/bulk-claim-service/build.gradle
+++ b/bulk-claim-service/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'io.freefair.lombok' version '8.14'
     id 'net.researchgate.release' version '3.1.0'
     id("com.diffplug.spotless") version "7.2.1"
-    id 'uk.gov.laa.ccms.springboot.laa-ccms-spring-boot-gradle-plugin' version '0.0.41'
+    id 'uk.gov.laa.ccms.springboot.laa-ccms-spring-boot-gradle-plugin' version '0.0.42'
 }
 
 test {
@@ -36,8 +36,8 @@ dependencies {
     // Upgrade to fix vulnerabilities in tomcat-embed-core
     implementation 'org.apache.tomcat.embed:tomcat-embed-core:11.0.10'
 
-
     implementation project(':bulk-claim-api')
+    implementation project(':claims-api-reference')
     implementation project(':provider-details-api-reference')
 
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
