--- a/data-claims-event-service/src/main/resources/application.yml
+++ b/data-claims-event-service/src/main/resources/application.yml
@@ -51,3 +51,7 @@ laa:
     hostname: ${CLAIMS_API_URL}
     url: ${laa.claims-api.hostname}
     accessToken: ${CLAIMS_API_ACCESS_TOKEN}
+  fee-scheme-platform-api:
+    hostname: ${FEE_SCHEME_PLATFORM_API_URL}
+    url: ${laa.claims-api.hostname}
+    accessToken: ${FEE_SCHEME_PLATFORM_API_ACCESS_TOKEN}
