Story: [CCMSPUI 771 + 768] Fee scheme platform api client (#5)
* fee scheme platform api client

* address review comments

* update imports

* undo renaming to avoid conflicts

* spotless

* update integration test imports

* update method name

* disable openapi nullable

--- a/settings.gradle
+++ b/settings.gradle
@@ -19,4 +19,5 @@ include 'claims-api-reference'
 include 'provider-details-api-reference'
 include 'bulk-claim-api'
 include 'data-claims-event-service'
+include 'reference-fee-scheme-platform-api'
 
