--- a/data-claims-event-service/build.gradle
+++ b/data-claims-event-service/build.gradle
@@ -35,10 +35,13 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.18.0'
     // Upgrade to fix vulnerabilities in tomcat-embed-core
     implementation 'org.apache.tomcat.embed:tomcat-embed-core:11.0.10'
+    // Upgrade to fix vulnerabilities in netty
+    implementation 'io.netty:netty-codec-http2:4.2.4.Final'
 
     implementation project(':bulk-claim-api')
     implementation project(':claims-api-reference')
     implementation project(':provider-details-api-reference')
+    implementation project(':reference-fee-scheme-platform-api')
 
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
