CCMSPUI-805 Integrate AWS SQS with Event Service (including LocalStack setup)

--- a/data-claims-event-service/src/integrationTest/resources/application.yml
+++ b/data-claims-event-service/src/integrationTest/resources/application.yml
@@ -55,3 +55,5 @@ laa:
     hostname: ${FEE_SCHEME_PLATFORM_API_URL}
     url: ${laa.claims-api.hostname}
     accessToken: ${FEE_SCHEME_PLATFORM_API_ACCESS_TOKEN}
+  bulk-claim-queue:
+    name: ${BULK_CLAIM_QUEUE_NAME}
