--- a/data-claims-event-service/build.gradle
+++ b/data-claims-event-service/build.gradle
@@ -29,6 +29,7 @@ jacocoTestCoverageVerification {
     }
 }
 
+
 dependencies {
 
     /**
@@ -43,6 +44,9 @@ dependencies {
     // Upgrade to fix vulnerabilities in spring-webmvc
     implementation 'org.springframework:spring-webmvc:6.2.10'
 
+    // Import spring-cloud-aws BOM (Bill Of Materials) for dependency management
+    implementation platform('io.awspring.cloud:spring-cloud-aws:3.2.0')
+
     implementation project(':reference-data-claim-api')
     implementation project(':reference-provider-details-api')
     implementation project(':reference-fee-scheme-platform-api')
@@ -52,6 +56,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'io.awspring.cloud:spring-cloud-aws-starter'
+    implementation 'io.awspring.cloud:spring-cloud-aws-starter-sqs'
     implementation 'io.micrometer:micrometer-tracing-bridge-brave'
     implementation 'jakarta.validation:jakarta.validation-api:3.1.1'
     implementation 'org.projectlombok:lombok:1.18.38'
@@ -69,8 +75,13 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.testcontainers:mockserver:1.21.3'
+    testImplementation 'org.testcontainers:junit-jupiter'
+    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
+    testImplementation 'org.testcontainers:mockserver'
+    testImplementation 'org.testcontainers:localstack'
+    testImplementation 'org.awaitility:awaitility'
     testImplementation 'org.mock-server:mockserver-client-java:5.15.0'
+
 
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
