validate fee calculation

--- a/data-claims-event-service/src/main/resources/application.yml
+++ b/data-claims-event-service/src/main/resources/application.yml
@@ -16,6 +16,10 @@ spring:
     hibernate:
       ddl-auto: none
 
+  threads:
+    virtual:
+      enabled: true
+
 # used by actuator info endpoint
 info:
   app:
