--- a/data-claims-event-service/src/test/resources/application.yml
+++ b/data-claims-event-service/src/test/resources/application.yml
@@ -2,10 +2,12 @@ laa:
   bulk-claim-queue:
     name: test-queue-name
 
-aws:
-  sqs:
-    endpoint: http://localhost:4566
-    region: us-east-1
-    credentials:
-      access-key: dummy-access-key
-      secret-key: dummy-secret-key
+spring:
+  cloud:
+    aws:
+      endpoint: http://localhost:4566
+      credentials:
+        access-key: dummy-access-key
+        secret-key: dummy-secret-key
+      region:
+        static: us-east-1
