--- a/reference-data-claim-api/build.gradle
+++ b/reference-data-claim-api/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     implementation 'org.apache.tomcat.embed:tomcat-embed-core:11.0.9'
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.data:spring-data-commons'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
     implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
 }
