CCMSPUI-805: Integrate SQS locally (#8)
* CCMSPUI-805 Integrate AWS SQS with Event Service (including LocalStack setup)

* CCMSPUI-805 Simplified BulkSubmissionListenerIntegrationTests

* CCMSPUI-805 | Added initial Wiremock setup, and wiremocks for data claims API

* CCMSPUI-805 | Added more wiremock responses for Fee Scheme API and Provider Data API.

* CCMSPUI-805 | Added wiremock properties, and added helper scripts to add messages to localstack queue

* CCMSPUI-805 | Updated Wiremocks to have correct data formats

* CCMSPUI-805 | Javadocs added, removed unused BulkClaimQueueProperties.java and BulkClaimQueuePropertiesEnablerConfiguration.java

* CCMSPUI-805 | Fixes to tests

* CCMSPUI-805 | Disabled AWS SQS on some integration tests

* CCMSPUI-805 | Updated test responses, general tidyup, and spotless applied

* CCMSPUI-805 | Added information regarding helper SQS scripts to README.md

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,60 @@
 services:
-  app:
-    build:
-      context: .
+  localstack:
+    container_name: event-service-localstack
+    image: localstack/localstack:latest
     ports:
-      - "8080:8080"
+      - "4566:4566"
+    environment:
+      - SERVICES=sqs
+      - DEBUG=1
+      - AWS_DEFAULT_REGION=us-east-1
+
+    volumes:
+      - "./docker-scripts/init-localstack.sh:/etc/localstack/init/ready.d/init-localstack.sh"
+      - "${LOCALSTACK_VOLUME_DIR:-./volume}:/var/lib/localstack"
+      - "/var/run/docker.sock:/var/run/docker.sock"
+  data-claim-api-wiremock:
+    image: wiremock/wiremock:latest
+    container_name: data-claim-api-wiremock
+    entrypoint:
+      [
+        "/docker-entrypoint.sh",
+        "--global-response-templating",
+        "--disable-gzip",
+        "--verbose",
+      ]
+    volumes:
+      - ./wiremock/mappings/data-claims-api:/home/wiremock/mappings
+    restart: always
+    ports:
+      - "8190:8080"
+  fee-scheme-platform-api-wiremock:
+    image: wiremock/wiremock:latest
+    container_name: fee-scheme-platform-api-wiremock
+    entrypoint:
+      [
+        "/docker-entrypoint.sh",
+        "--global-response-templating",
+        "--disable-gzip",
+        "--verbose",
+      ]
+    volumes:
+      - ./wiremock/mappings/data-claims-api:/home/wiremock/mappings
+    restart: always
+    ports:
+      - "8191:8080"
+  provider-details-api-wiremock:
+    image: wiremock/wiremock:latest
+    container_name: provider-details-api-wiremock
+    entrypoint:
+      [
+        "/docker-entrypoint.sh",
+        "--global-response-templating",
+        "--disable-gzip",
+        "--verbose",
+      ]
+    volumes:
+      - ./wiremock/mappings/provider-details-api:/home/wiremock/mappings
+    restart: always
+    ports:
+      - "8192:8080"
