DSTEW-319: Entity Validation
1. Added Json Schema validation using networkNT
2. For errors related to a submission, add one error at submission level rather than adding it to all claims.
3. Add some business validations from the data dictionary (more to be added).

--- a/data-claims-event-service/build.gradle
+++ b/data-claims-event-service/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+    implementation 'com.networknt:json-schema-validator:1.5.8'
 
     runtimeOnly 'com.h2database:h2'
 
