--- a/data-claims-event-service/build.gradle
+++ b/data-claims-event-service/build.gradle
@@ -29,6 +29,13 @@ jacocoTestCoverageVerification {
     }
 }
 
+dependencyManagement {
+    imports {
+        // Upgrade to fix vulnerabilities in netty
+        mavenBom('io.netty:netty-bom:4.2.5.Final')
+    }
+}
+
 dependencies {
 
     /**
